# Pour-Decisions

./: dev_idea.txt  launch-pour-decisions.bat
pour-decisions/: .gitignore  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.cjs
pour-decisions/pour_decisions/: __init__.py  cli.py  data.py  engine.py  models.py  storage.py
pour-decisions/src/: App.css  App.tsx  index.css
