[project]
name = "pour-decisions"
version = "0.1.0"
description = "BitLife-style bartender simulation in the terminal."
authors = [{ name = "Pour Decisions Team" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"
